fixed bug where dashboard-content-container was going off screen from bottom

--- a/src/screens/dashboard/styles/Dashboard.css
+++ b/src/screens/dashboard/styles/Dashboard.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100vh - 58px);
   margin-top: 58px;
   overflow-x: auto;
   overflow-y: auto;
